[gd_scene load_steps=6 format=3 uid="uid://bi3bprqnlw3dn"]

[ext_resource type="Script" path="res://scripts/enemies/Arrow.gd" id="1_5vavj"]
[ext_resource type="Shader" path="res://Shaders/DarkenShader.gdshader" id="2_lvlk7"]
[ext_resource type="Texture2D" uid="uid://cd52y7faqfxf5" path="res://Necromancer/Necromancer/Attack/MagicProjectile.png" id="3_lbdli"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a6ck3"]
shader = ExtResource("2_lvlk7")
shader_parameter/other_color = Color(0, 0, 0, 1)
shader_parameter/isOtherWorld = null

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xp1cf"]
size = Vector2(41, 6)

[node name="MagicProjectile" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 14
script = ExtResource("1_5vavj")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_a6ck3")
texture = ExtResource("3_lbdli")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7, 0)
shape = SubResource("RectangleShape2D_xp1cf")
disabled = true

[node name="MagicHitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="MagicHitbox"]
position = Vector2(7.5, 0)
shape = SubResource("RectangleShape2D_xp1cf")

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="body_entered" from="MagicHitbox" to="." method="_on_magic_hitbox_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
